# rag-chat-app

./: .env  .flake8  .gitignore  README.md  pyproject.toml  start_devserver.sh
src/: main.py  my_cl_app.py
src/config/: env_config.py  logging_config.py
src/models/: ChatRequest.py  Request.py
src/notes/: azure-ai-search-notes.py
src/templates/: keywords_prompt.py  response_prompt.py
src/utils/: logger_setup.py  settings.py
static/: chat-stream.html  index.html
